implements the get-slugs request
